hotfix: 회원가입 요청 형식 JSON으로 수정